[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["data-structures", "parser-implementations", "web-programming"]
description = "FHIR SDK Models."
documentation = "https://docs.rs/fhir-sdk"
edition = "2021"
exclude = ["/tests/*-examples-json"]
homepage = "https://github.com/FlixCoder/fhir-sdk"
keywords = ["FHIR", "JSON", "types"]
license = "MIT"
name = "fhir-model"
readme = "README.md"
repository = "https://github.com/FlixCoder/fhir-sdk"
version = "0.6.0"

[features]
default = ["r5", "builders"]
builders = ["dep:typed-builder"]
r4b = []
r5 = []

[dependencies]
base64 = "0.21.3"
serde = {version = "1.0.158", features = ["derive"]}
time = { version = "0.3.27", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
    "serde-well-known",
] }
typed-builder = {version = "0.16.0", optional = true}

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = "1.0.94"

[profile.dev.build-override]
opt-level = 2
[profile.test.build-override]
opt-level = 2
[profile.release.build-override]
opt-level = 2

[package.metadata.docs.rs]
features = ["r5", "builders"]
no-default-features = true
