[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["data-structures", "parser-implementations", "web-programming"]
description = "FHIR SDK Models."
documentation = "https://docs.rs/fhir-sdk"
edition = "2021"
exclude = ["/tests/*-examples-json"]
homepage = "https://github.com/FlixCoder/fhir-sdk"
keywords = ["FHIR", "JSON", "types"]
license = "MIT"
name = "fhir-model"
readme = "README.md"
repository = "https://github.com/FlixCoder/fhir-sdk"
rust-version = "1.75"
version = "0.12.0"

[lints]
workspace = true

[features]
default = ["r5", "builders"]
builders = ["dep:derive_builder"]
stu3 = []
r4b = []
r5 = []

[dependencies]
base64 = "0.22.0"
derive_builder = { version = "0.20.0", optional = true }
serde = { version = "1.0.158", features = ["derive"] }
time = { version = "0.3.27", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
    "serde-well-known",
] }

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = "1.0.94"

[package.metadata.docs.rs]
features = ["r5", "builders"]
no-default-features = true
