[package]
name = "fhir-model"
version = "0.12.1"
exclude = ["/tests/*-examples-json"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["r5", "builders"]
builders = ["dep:derive_builder"]
stu3 = []
r4b = []
r5 = []

[dependencies]
base64 = "0.22.0"
derive_builder = { version = "0.20.0", optional = true }
serde = { version = "1.0.158", features = ["derive"] }
time = { version = "0.3.27", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
    "serde-well-known",
] }

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = "1.0.139"

[package.metadata.docs.rs]
features = ["r5", "builders"]
no-default-features = true
