[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["data-structures", "parser-implementations", "web-programming"]
description = "FHIR Software Development Kit. Library for interfacing with FHIR."
documentation = "https://docs.rs/fhir-sdk"
edition = "2021"
homepage = "https://github.com/FlixCoder/fhir-sdk"
keywords = ["FHIR", "JSON", "types"]
license = "MIT"
name = "fhir-sdk"
readme = "README.md"
repository = "https://github.com/FlixCoder/fhir-sdk"
version = "0.10.0"

[lints]
workspace = true

[features]
default = ["r5", "builders", "client", "docs"]
client = [
	"builders",
	"dep:async-trait",
	"dep:futures",
	"dep:reqwest",
	"dep:serde",
	"dep:serde_json",
	"dep:thiserror",
	"dep:tokio-retry",
	"dep:tracing",
	"dep:uuid",
]
builders = ["fhir-model/builders"]
stu3 = ["fhir-model/stu3"]
r4b = ["fhir-model/r4b"]
r5 = ["fhir-model/r5"]
docs = []

[dependencies]
async-trait = {version = "0.1.68", optional = true}
fhir-model = {path = "../fhir-model", version = "0.9.0", default-features = false}
futures = {version = "0.3.28", optional = true}
reqwest = {version = "0.11.16", features = ["json"], optional = true}
serde = {version = "1.0.159", optional = true}
serde_json = {version = "1.0.95", optional = true}
thiserror = {version = "1.0.40", optional = true}
tokio-retry = {version = "0.3.0", optional = true}
tracing = {version = "0.1.4", optional = true}
uuid = {version = "1.4.1", features = ["v4"], optional = true}

[dev-dependencies]
eyre = "0.6.8"
once_cell = "1.18.0"
tokio = {version = "1.27.0", features = ["full"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

[package.metadata.docs.rs]
features = ["r5", "builders", "client", "docs"]
no-default-features = true
