[package]
name = "fhir-sdk"
version = "0.14.2"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["r5", "builders", "client", "docs", "dep-defaults"]
client = [
	"builders",
	"dep:async-trait",
	"dep:futures",
	"dep:reqwest",
	"dep:serde_json",
	"dep:thiserror",
	"dep:tokio",
	"dep:tokio-retry",
	"dep:tracing",
	"dep:uuid",
]
builders = ["fhir-model/builders"]
stu3 = ["fhir-model/stu3"]
r4b = ["fhir-model/r4b"]
r5 = ["fhir-model/r5"]
docs = []

dep-defaults = ["reqwest?/default"]

http2 = ["reqwest?/http2"]
default-tls = ["reqwest?/default-tls"]
native-tls = ["reqwest?/native-tls"]
native-tls-vendored = ["reqwest?/native-tls-vendored"]
native-tls-alpn = ["reqwest?/native-tls-alpn"]
rustls-tls = ["reqwest?/rustls-tls"]
rustls-tls-manual-roots = ["reqwest?/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest?/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest?/rustls-tls-native-roots"]
blocking = ["reqwest?/blocking"]
charset = ["reqwest?/charset"]
cookies = ["reqwest?/cookies"]
gzip = ["reqwest?/gzip"]
brotli = ["reqwest?/brotli"]
zstd = ["reqwest?/zstd"]
deflate = ["reqwest?/deflate"]
multipart = ["reqwest?/multipart"]
stream = ["reqwest?/stream"]
socks = ["reqwest?/socks"]
hickory-dns = ["reqwest?/hickory-dns"]
macos-system-configuration = ["reqwest?/macos-system-configuration"]

[dependencies]
async-trait = { version = "0.1.86", optional = true }
fhir-model = { path = "../fhir-model", version = "0.12.0", default-features = false }
futures = { version = "0.3.28", optional = true }
reqwest = { version = "0.12.2", default-features = false, features = ["json"], optional = true }
serde = { version = "1.0.159" }
serde_json = { version = "1.0.95", optional = true }
thiserror = { version = "2.0.11", optional = true }
tokio = { version = "1.43.1", features = ["sync"], optional = true }
tokio-retry = { version = "0.3.0", optional = true }
tracing = { version = "0.1.4", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }

[dev-dependencies]
anyhow = "1.0.96"
tokio = { version = "1.43.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wiremock = "0.6.2"

[package.metadata.docs.rs]
features = ["r5", "builders", "client", "docs", "dep-defaults"]
no-default-features = true
