[package]
name = "fhir-sdk"
version = "0.15.1"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["r5", "builders", "client", "docs", "dep-defaults"]
client = [
	"builders",
	"dep:async-trait",
	"dep:futures",
	"dep:reqwest",
	"dep:serde_json",
	"dep:thiserror",
	"dep:tokio",
	"dep:tokio-retry",
	"dep:tracing",
	"dep:uuid",
]
builders = ["fhir-model/builders"]
stu3 = ["fhir-model/stu3"]
r4b = ["fhir-model/r4b"]
r5 = ["fhir-model/r5"]
docs = []

dep-defaults = ["reqwest?/default"]

http2 = ["reqwest?/http2"]
http3 = ["reqwest?/http3"]
default-tls = ["reqwest?/default-tls"]
native-tls = ["reqwest?/native-tls"]
native-tls-no-alpn = ["reqwest?/native-tls-no-alpn"]
native-tls-vendored = ["reqwest?/native-tls-vendored"]
native-tls-vendored-no-alpn = ["reqwest?/native-tls-vendored-no-alpn"]
rustls = ["reqwest?/rustls"]
rustls-native-certs = ["reqwest?/rustls-native-certs"]
rustls-no-provider = ["reqwest?/rustls-no-provider"]
webpki-roots = ["reqwest?/webpki-roots"]
blocking = ["reqwest?/blocking"]
charset = ["reqwest?/charset"]
cookies = ["reqwest?/cookies"]
gzip = ["reqwest?/gzip"]
brotli = ["reqwest?/brotli"]
zstd = ["reqwest?/zstd"]
deflate = ["reqwest?/deflate"]
multipart = ["reqwest?/multipart"]
stream = ["reqwest?/stream"]
socks = ["reqwest?/socks"]
hickory-dns = ["reqwest?/hickory-dns"]
system-proxy = ["reqwest?/system-proxy"]

[dependencies]
async-trait = { version = "0.1.86", optional = true }
fhir-model = { path = "../fhir-model", version = "0.12.1", default-features = false }
futures = { version = "0.3.28", optional = true }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "query", "form"], optional = true }
serde = { version = "1.0.159" }
serde_json = { version = "1.0.95", optional = true }
thiserror = { version = "2.0.11", optional = true }
tokio = { version = "1.43.1", features = ["sync"], optional = true }
tokio-retry = { version = "0.3.0", optional = true }
tracing = { version = "0.1.4", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wiremock = "0.6.5"

[package.metadata.docs.rs]
features = ["r5", "builders", "client", "docs", "dep-defaults"]
no-default-features = true
