[package]
edition = "2021"
name = "generate"
version = "0.1.0"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.70"
fhir-model = {version = "0.10.1", default-features = false, features = ["stu3", "r4b", "r5"]}
once_cell = "1.18.0"
prettyplease = "0.2.0"
proc-macro2 = "1.0.53"
quote = "1.0.26"
regex = "1.9.4"
serde_json = "1.0.95"
syn = {version = "2.0.8", features = ["full"]}
