[package]
name = "generate"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.100"
fhir-model = {version = "0.12.1", default-features = false, features = ["stu3", "r4b", "r5"]}
once_cell = "1.21.3"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quote = "1.0.41"
regex = "1.12.2"
serde_json = "1.0.145"
syn = {version = "2.0.108", features = ["full"]}
